menu overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ body.modal-open {
   }
 }
 /* Меню сайту на мобільном */
-.button__menu {
+.menu__button {
   z-index: 3;
   display: block;
   margin-left: auto;
@@ -362,27 +362,27 @@ body.modal-open {
   background-color: transparent;
   cursor: pointer;
 }
-.button__menu .icon__menu--close {
+.menu__button .menu__icon--close {
   display: none;
 }
-.button__menu.button__menu--is-open .icon__menu--close {
+.menu__button.menu__button--is-open .menu__icon--close {
   display: block;
 }
-.button__menu.button__menu--is-open .icon__menu--open {
+.menu__button.menu__button--is-open .menu__icon--open {
   display: none;
 }
-.button__menu .logo.logo--is-close {
+.menu__button .logo.logo--is-close {
   display: none;
 }
 
-.icon__menu {
+.menu__icon {
   width: 40px;
   height: 40px;
   fill: #000000;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button__menu:active .icon__menu {
+.menu__button:active .menu__icon {
   fill: #2196F3;
   outline: none;
 }
@@ -396,6 +396,7 @@ body.modal-open {
   width: 100%;
   height: 100%;
   padding: 48px 0 48px 40px;
+  overflow: auto;
   background-color: #FFFFFF;
 }
 .menu__container.menu--is-open {
@@ -421,7 +422,7 @@ body.modal-open {
   margin: 0;
 }
 
-.mail-tel__menu {
+.menu__mail-tel {
   margin-top: auto;
 }
 
@@ -477,7 +478,7 @@ body.modal-open {
 
 /* Медіа запити*/
 @media screen and (min-width: 768px) {
-  .button__menu {
+  .menu__button {
     display: none;
   }
   .menu__container.menu--is-open {
