--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,5 +1,5 @@
 /* Меню сайту на мобільном */
-.button__menu {
+.menu__button {
     z-index: 3;
     display: block;
     margin-left: auto;
@@ -8,15 +8,15 @@
     background-color: transparent;
     cursor: pointer;
 
-    & .icon__menu--close {
+    & .menu__icon--close {
         display: none;
     }
 
-    &.button__menu--is-open .icon__menu--close {
+    &.menu__button--is-open .menu__icon--close {
         display: block;
     }
 
-    &.button__menu--is-open .icon__menu--open {
+    &.menu__button--is-open .menu__icon--open {
         display: none;
     }
 
@@ -26,14 +26,14 @@
 
 }
 
-.icon__menu {
+.menu__icon {
     width: 40px;
     height: 40px;
     fill: #000000; 
 
     @include transitionRules ();
     
-        .button__menu:active &  {
+        .menu__button:active &  {
             fill: $blue-color;
             outline: none;
         }
@@ -48,7 +48,7 @@
     width: 100%;
     height: 100%;
     padding: 48px 0 48px 40px;
-
+    overflow: auto;
     background-color: $white-color;
        
     &.menu--is-open {
@@ -77,7 +77,7 @@
        
     }
 }
-.mail-tel__menu {
+.menu__mail-tel {
     margin-top: auto;
 }
     
@@ -141,7 +141,7 @@
 
 /* Медіа запити*/
 @media screen and (min-width: $tablet) {
-    .button__menu {
+    .menu__button {
         display: none;
     }
     .menu__container.menu--is-open {
